# whisper-background-server

./: AGENTS.md  Cargo.toml  DEPRECATION_NOTICE.md  FUTURE_SCHEMA_PLAN.md  MAINTENANCE.md  MIGRATION.md  MIGRATION_FAQ.md  README.md  dashboard_specs.md  migration_example.py  sot_to_json_converter.rs  test_json_interface.sh
openspec/: project.md
openspec/changes/refactor-json-interface/: design.md  error-handling-strategy.md  migration-plan.md  proposal.md  tasks.md
openspec/changes/refactor-json-interface/specs/audio-input/: spec.md
openspec/changes/refactor-main-structure/: design.md  proposal.md  tasks.md
openspec/changes/refactor-main-structure/specs/application-structure/: spec.md
openspec/changes/replace-arg-parser-with-pico-args/: README.md  design.md  proposal.md  tasks.md
src/: alerting_config.rs  audio.rs  environment.rs  logging.rs  logging_patterns.rs  main.rs  metrics.rs  monitoring_config.rs  performance_monitoring.rs  transcription.rs
test_output/: COMPREHENSIVE_TEST_REPORT.md  PHASE3_TESTING_SUMMARY.md  PHASE4_VALIDATION_REPORT.md  argument_parsing_results.txt  audio_processing_results.txt  end_to_end_results.txt  error_handling_results.txt  json_output_results.txt  server_initialization_results.txt  simple_argument_results.txt  simple_argument_test.sh  test_argument_parsing.sh  test_argument_parsing_comprehensive.sh  test_audio_processing.sh  test_end_to_end.sh  test_error_handling.sh  test_json_output.sh  test_logging_comprehensive.sh  test_server_initialization.sh
(+2 files in other folders)
